--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,21 +7,21 @@
         android:title="Home"
         />
     <item
-        android:id="@+id/personalFragment"
-        android:enabled="true"
-        android:icon="@drawable/personal"
-        android:title="Personal"
-        />
-    <item
-        android:id="@+id/projectFragment"
+        android:id="@+id/todoFragment"
         android:enabled="true"
         android:icon="@drawable/project"
-        android:title="Project"
+        android:title="Todo"
         />
     <item
         android:id="@+id/calendarFragment"
         android:enabled="true"
         android:icon="@drawable/calendar"
         android:title="Calendar"
+        />
+    <item
+        android:id="@+id/settingFragment"
+        android:enabled="true"
+        android:icon="@drawable/settings"
+        android:title="Setting"
         />
 </menu>
