--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,18 +10,18 @@
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
     <fragment
-        android:id="@+id/personalFragment"
-        android:name="com.example.todo_list.Fragment.PersonalFragment"
+        android:id="@+id/todoFragment"
+        android:name="com.example.todo_list.Fragment.ToDoFragment"
         android:label="fragment_personal"
-        tools:layout="@layout/fragment_personal" />
-    <fragment
-        android:id="@+id/projectFragment"
-        android:name="com.example.todo_list.Fragment.ProjectFragment"
-        android:label="fragment_project"
-        tools:layout="@layout/fragment_project" />
+        tools:layout="@layout/fragment_todo" />
     <fragment
         android:id="@+id/calendarFragment"
         android:name="com.example.todo_list.Fragment.CalenderFragment"
+        android:label="fragment_project"
+        tools:layout="@layout/fragment_setting" />
+    <fragment
+        android:id="@+id/settingFragment"
+        android:name="com.example.todo_list.Fragment.SettingFragment"
         android:label="fragment_calender"
         tools:layout="@layout/fragment_calender" />
 </navigation>
