--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#808080</color>
     <color name="filter">#0033FF</color>
+    <color name="blue">#1973E8</color>
+    <color name="blue_light">#D2E3FC</color>
 </resources>
