--- a/app/src/main/res/layout/calendar_day.xml
+++ b/app/src/main/res/layout/calendar_day.xml
@@ -20,7 +20,8 @@
         android:id="@+id/exThreeDotView"
         android:layout_width="4.5dp"
         android:layout_height="4.5dp"
-        android:layout_marginBottom="10dp"
         android:layout_gravity="bottom|center_horizontal"
-        android:background="@drawable/today_bg" />
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/today_bg"
+        android:visibility="gone" />
 </FrameLayout>
