--- a/app/src/main/res/layout/event_item_view.xml
+++ b/app/src/main/res/layout/event_item_view.xml
@@ -1,17 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="20dp"
-    android:background="?attr/selectableItemBackground"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <import type="com.example.todo_list.data.ToDoEntity"/>
+        <variable
+            name="todoEntity"
+            type="com.example.todo_list.data.ToDoEntity" />
+    </data>
 
-
-    <TextView
-        android:id="@+id/itemEventText"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        tools:text="Play football with friends" />
+        android:background="?attr/selectableItemBackground"
+        android:orientation="vertical"
 
-</FrameLayout>
+        android:padding="20dp">
+
+
+        <TextView
+            android:id="@+id/itemEventText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@{todoEntity.title}"
+            android:textSize="16sp"
+            tools:text="Play football with friends" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/itemEventText2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@{todoEntity.start_date}"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="16sp"
+                android:text="@{todoEntity.deadline_date}" />
+        </LinearLayout>
+
+    </LinearLayout>
+</layout>
