CycleFragment add & HomeFragment update

--- a/app/src/main/res/layout/recyclerview_todo_item.xml
+++ b/app/src/main/res/layout/recyclerview_todo_item.xml
@@ -21,7 +21,7 @@
             android:layout_height="match_parent"
             android:orientation="horizontal"
             android:background="@drawable/rectangle"
-            android:backgroundTint="#EDDFB4"
+            android:backgroundTint="@color/todo"
             android:padding="5dp">
 
             <LinearLayout
