--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
     <color name="filter">#0033FF</color>
     <color name="blue">#1973E8</color>
     <color name="blue_light">#D2E3FC</color>
+    <color name="red">#FF0000</color>
+    <color name="todo">#EDDFB4</color>
+    <color name="todo_done">#808080</color>
 </resources>
