--- a/app/src/main/res/layout/recyclerview_todo_item.xml
+++ b/app/src/main/res/layout/recyclerview_todo_item.xml
@@ -21,7 +21,6 @@
             android:layout_height="match_parent"
             android:orientation="horizontal"
             android:background="@drawable/rectangle"
-            android:backgroundTint="@color/todo"
             android:padding="5dp">
 
             <LinearLayout
@@ -35,8 +34,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:textColor="@color/black"
                     android:text="@{todoEntity.title}"
-                    android:textSize="20dp" />
+                    android:textSize="15dp" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -49,7 +49,8 @@
                         android:id="@+id/recycler_startdate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@{todoEntity.start_date}" />
+                        android:text="@{todoEntity.start_date}"
+                        android:textSize="10dp"/>
 
                     <TextView
                         android:id="@+id/textView3"
@@ -64,7 +65,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@{todoEntity.deadline_date}" />
+                        android:text="@{todoEntity.deadline_date}"
+                        android:textSize="10dp"/>
                 </LinearLayout>
 
             </LinearLayout>
@@ -79,8 +81,8 @@
 
                 <ImageView
                     android:id="@+id/imageView2"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:src="@drawable/star" />
 
                 <TextView
@@ -88,7 +90,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="@{todoEntity.importance.toString()}" />
+                    android:text="@{todoEntity.importance.toString()}"
+                    android:textSize="10dp"/>
             </LinearLayout>
         </LinearLayout>
 
