CycleFragment 요일 표시

--- a/app/src/main/res/layout/recyclerview_cycle_item.xml
+++ b/app/src/main/res/layout/recyclerview_cycle_item.xml
@@ -20,20 +20,28 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:background="@drawable/rectangle"
             android:padding="5dp"
             >
 
             <TextView
                 android:id="@+id/recycler_title"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@{cycleEntity.title}"
                 android:textColor="@color/black"
                 android:textSize="15dp"
                 android:padding="10dp"/>
+
+            <TextView
+                android:id="@+id/show_day"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" 월 화 수 목 금 토 일"
+                android:paddingLeft="10dp"
+                />
         </LinearLayout>
     </LinearLayout>
 </layout>
