--- a/app/src/main/res/layout/activity_cycle_register.xml
+++ b/app/src/main/res/layout/activity_cycle_register.xml
@@ -1,158 +1,189 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="10dp">
-
-    <TextView
-        android:id="@+id/choice_day"
+    android:orientation="vertical">
+    <TimePicker
+        android:id="@+id/timePicker"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textColor="#202020"
-        android:padding="10dp"/>
+        android:layout_height="250dp"
+        android:layout_marginTop="20dp"
+        android:theme="@style/TimePickerStyle"
+        android:timePickerMode="spinner"
+        />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingBottom="20dp">
-
-        <ToggleButton
-            android:id="@+id/sunday"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:layout_weight="1"
-            android:textOn="일"
-            android:textOff="일"
-            android:textStyle="bold"
-            android:textSize="18dp"
-            android:textColor="@color/red"
-            android:background="@drawable/toggle"
-            android:layout_margin="5dp"
-            />
-
-        <ToggleButton
-            android:id="@+id/monday"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:layout_weight="1"
-            android:textOn="월"
-            android:textOff="월"
-            android:textStyle="bold"
-            android:textSize="18dp"
-            android:textColor="#202020"
-            android:background="@drawable/toggle"
-            android:layout_margin="5dp"/>
-
-        <ToggleButton
-            android:id="@+id/tuesday"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:layout_weight="1"
-            android:textOn="화"
-            android:textOff="화"
-            android:textStyle="bold"
-            android:textSize="18dp"
-            android:textColor="#202020"
-            android:background="@drawable/toggle"
-            android:layout_margin="5dp"/>
-
-        <ToggleButton
-            android:id="@+id/wednesday"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:layout_weight="1"
-            android:textOn="수"
-            android:textOff="수"
-            android:textColor="#202020"
-            android:textStyle="bold"
-            android:textSize="18dp"
-            android:background="@drawable/toggle"
-            android:layout_margin="5dp"/>
-
-        <ToggleButton
-            android:id="@+id/thursday"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:layout_weight="1"
-            android:textOn="목"
-            android:textOff="목"
-            android:textStyle="bold"
-            android:textSize="18dp"
-            android:textColor="#202020"
-            android:background="@drawable/toggle"
-            android:layout_margin="5dp"/>
-
-        <ToggleButton
-            android:id="@+id/friday"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:layout_weight="1"
-            android:textOn="금"
-            android:textOff="금"
-            android:textColor="#202020"
-            android:textStyle="bold"
-            android:textSize="18dp"
-            android:background="@drawable/toggle"
-            android:layout_margin="5dp"/>
-
-        <ToggleButton
-            android:id="@+id/saturday"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:layout_weight="1"
-            android:textOn="토"
-            android:textOff="토"
-            android:textStyle="bold"
-            android:textSize="18dp"
-            android:textColor="@color/blue"
-            android:background="@drawable/toggle"
-            android:layout_margin="5dp"/>
-    </LinearLayout>
-
-
-    <EditText
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:backgroundTint="@color/gray"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="제목"
-        android:textColorHint="@color/gray"
-        android:textColor="@color/gray"
-        android:paddingLeft="20dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="bottom"
+        android:orientation="vertical"
+        android:background="@drawable/routine_rectangle"
+        android:padding="10dp"
         >
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/cycleCancel"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="취소"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            android:textColor="#202020"
-            android:background="?attr/selectableItemBackground"/>
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/choice_day"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textStyle="bold"
+                android:textColor="#202020"
+                android:padding="10dp"/>
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/cycleRegister"
-            android:layout_width="wrap_content"
+            <ImageView
+                android:id="@+id/datePicker"
+                android:layout_width="25dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="10dp"
+                app:srcCompat="@drawable/calendar_color"
+                android:clickable="true"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:paddingBottom="20dp">
 
-            android:text="등록"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            android:textColor="#202020"
-            android:background="?attr/selectableItemBackground"/>
+            <ToggleButton
+                android:id="@+id/sunday"
+                android:layout_width="50dp"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:textOn="일"
+                android:textOff="일"
+                android:textStyle="bold"
+                android:textSize="18dp"
+                android:textColor="@color/red"
+                android:background="@drawable/toggle"
+                android:layout_margin="5dp"
+                />
+
+            <ToggleButton
+                android:id="@+id/monday"
+                android:layout_width="50dp"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:textOn="월"
+                android:textOff="월"
+                android:textStyle="bold"
+                android:textSize="18dp"
+                android:textColor="#202020"
+                android:background="@drawable/toggle"
+                android:layout_margin="5dp"/>
+
+            <ToggleButton
+                android:id="@+id/tuesday"
+                android:layout_width="50dp"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:textOn="화"
+                android:textOff="화"
+                android:textStyle="bold"
+                android:textSize="18dp"
+                android:textColor="#202020"
+                android:background="@drawable/toggle"
+                android:layout_margin="5dp"/>
+
+            <ToggleButton
+                android:id="@+id/wednesday"
+                android:layout_width="50dp"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:textOn="수"
+                android:textOff="수"
+                android:textColor="#202020"
+                android:textStyle="bold"
+                android:textSize="18dp"
+                android:background="@drawable/toggle"
+                android:layout_margin="5dp"/>
+
+            <ToggleButton
+                android:id="@+id/thursday"
+                android:layout_width="50dp"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:textOn="목"
+                android:textOff="목"
+                android:textStyle="bold"
+                android:textSize="18dp"
+                android:textColor="#202020"
+                android:background="@drawable/toggle"
+                android:layout_margin="5dp"/>
+
+            <ToggleButton
+                android:id="@+id/friday"
+                android:layout_width="50dp"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:textOn="금"
+                android:textOff="금"
+                android:textColor="#202020"
+                android:textStyle="bold"
+                android:textSize="18dp"
+                android:background="@drawable/toggle"
+                android:layout_margin="5dp"/>
+
+            <ToggleButton
+                android:id="@+id/saturday"
+                android:layout_width="50dp"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:textOn="토"
+                android:textOff="토"
+                android:textStyle="bold"
+                android:textSize="18dp"
+                android:textColor="@color/blue"
+                android:background="@drawable/toggle"
+                android:layout_margin="5dp"/>
+        </LinearLayout>
+
+
+        <EditText
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:backgroundTint="@color/gray"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:hint="제목"
+            android:textColorHint="@color/gray"
+            android:textColor="@color/gray"
+            android:paddingLeft="20dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="bottom"
+            android:padding="10dp"
+            >
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/cycleCancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="취소"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:textColor="#202020"
+                android:background="?attr/selectableItemBackground"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/cycleRegister"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+
+                android:text="등록"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:textColor="#202020"
+                android:background="?attr/selectableItemBackground"/>
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
