--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,17 +15,19 @@
         android:orientation="vertical"
         android:padding="10dp">
 
-        <Spinner
-            android:id="@+id/category"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="20dp"
-            android:scrollbarSize="10dp"
-            android:spinnerMode="dropdown" />
+<!--        <Spinner-->
+<!--            android:id="@+id/category"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:paddingLeft="20dp"-->
+<!--            android:scrollbarSize="10dp"-->
+<!--            android:spinnerMode="dropdown" />-->
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="30dp"
             android:orientation="vertical"
             android:padding="10dp">
 
@@ -49,18 +51,19 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="229dp"
+            android:layout_marginBottom="30dp"
             android:orientation="vertical"
             android:padding="10dp">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="20dp"
+                android:paddingLeft="5dp"
                 android:paddingTop="10dp"
-                android:paddingBottom="20dp"
+                android:paddingBottom="10dp"
                 android:text="상세 내용"
                 android:textColor="@color/black"
-                android:textSize="20dp"
+                android:textSize="15dp"
                 android:textStyle="bold" />
 
             <EditText
@@ -73,7 +76,7 @@
                 android:lines="5"
                 android:maxLines="5"
                 android:text="@{todoEntity.content}"
-                android:textSize="20dp"
+                android:textSize="15dp"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"/>
         </LinearLayout>
@@ -86,12 +89,12 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="20dp"
+                android:paddingLeft="5dp"
                 android:paddingTop="10dp"
-                android:paddingBottom="20dp"
+                android:paddingBottom="10dp"
                 android:text="기간"
                 android:textColor="@color/black"
-                android:textSize="20dp"
+                android:textSize="15dp"
                 android:textStyle="bold" />
 
             <LinearLayout
@@ -101,110 +104,49 @@
                 android:paddingBottom="15dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
-                    android:text="시작"
-                    android:textSize="20dp" />
-
-                <TextView
                     android:id="@+id/start_date"
                     android:layout_width="wrap_content"
-                    android:layout_height="48dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/rectangle"
-                    android:backgroundTint="#FFFFFF"
-                    android:ems="10"
-                    android:gravity="center"
-                    android:inputType="textPersonName"
-                    android:textSize="20dp"
+                    android:layout_height="wrap_content"
                     android:hint="YYYYMMDD"
-                    android:text="@{todoEntity.start_date}"/>
-
-                <ImageView
-                    android:id="@+id/start_image"
-                    android:layout_width="57dp"
-                    android:layout_height="match_parent"
-                    app:srcCompat="@drawable/calendar_color"
-                    android:clickable="true"/>
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="~"
-                android:textColor="#000000"
-                android:textStyle="bold" />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingTop="15dp">
+                    android:text="@{todoEntity.start_date}"
+                    android:textSize="15dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
-                    android:text="종료"
-                    android:textSize="20dp" />
+                    android:gravity="center"
+                    android:layout_marginStart="20dp"
+                    android:text="~"
+                    android:layout_marginEnd="20dp"
+                    android:textColor="#000000"
+                    android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/deadline_date"
-                    android:layout_width="221dp"
-                    android:layout_height="48dp"
+                    android:id="@+id/end_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
+
                     android:background="@drawable/rectangle"
                     android:backgroundTint="#FFFFFF"
                     android:ems="10"
-                    android:gravity="center"
-                    android:inputType="textPersonName"
-                    android:textSize="20dp"
+                    android:textSize="15dp"
                     android:hint="YYYYMMDD"
                     android:text="@{todoEntity.deadline_date}"/>
 
                 <ImageView
-                    android:id="@+id/deadline_image"
+                    android:id="@+id/calendar"
                     android:layout_width="57dp"
                     android:layout_height="match_parent"
                     app:srcCompat="@drawable/calendar_color"
                     android:clickable="true"/>
             </LinearLayout>
 
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="10dp">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="20dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="20dp"
-                android:text="중요도"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:textStyle="bold" />
-
-            <RatingBar
-                android:id="@+id/ratingBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:isIndicator="false"
-                android:numStars="5"
-                android:stepSize="1"
-                android:layout_gravity="center"
-                android:rating="@{todoEntity.importance}"/>
 
         </LinearLayout>
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
