--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,7 +26,7 @@
                     android:layout_height="wrap_content"
                     android:text="오늘 할 일 "
                     android:textColor="@color/black"
-                    android:textSize="20dp"
+                    android:textSize="17dp"
                     android:textStyle="bold|italic"
                     android:padding="10dp"/>
 
@@ -35,6 +35,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     android:background="@drawable/shadow"/>
             </LinearLayout>
 
@@ -47,9 +48,9 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="개인 일정 "
+                    android:text="일정 "
                     android:textColor="@color/black"
-                    android:textSize="20dp"
+                    android:textSize="17dp"
                     android:textStyle="bold|italic"
                     android:padding="10dp"/>
 
@@ -58,31 +59,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
-                    android:background="@drawable/shadow"/>
+                    android:background="@drawable/shadow"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="프로젝트 일정 "
-                    android:textColor="@color/black"
-                    android:textSize="20dp"
-                    android:textStyle="bold|italic"
-                    android:padding="10dp"/>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/project_recyclerview"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:background="@drawable/shadow"/>
-            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
