--- a/app/src/main/res/layout/recyclerview_cycle_item.xml
+++ b/app/src/main/res/layout/recyclerview_cycle_item.xml
@@ -10,21 +10,18 @@
             name="cycleEntity"
             type="com.example.todo_list.data.CycleEntity" />
     </data>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="5dp">
-
+        android:orientation="horizontal"
+        android:background="@drawable/shadow"
+        >
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:orientation="vertical"
-            android:background="@drawable/rectangle"
-            android:padding="5dp"
             >
-
             <TextView
                 android:id="@+id/recycler_title"
                 android:layout_width="wrap_content"
@@ -33,15 +30,28 @@
                 android:text="@{cycleEntity.title}"
                 android:textColor="@color/black"
                 android:textSize="15dp"
-                android:padding="10dp"/>
+                android:padding="10dp"
+                android:layout_marginStart="10dp"/>
 
             <TextView
                 android:id="@+id/show_day"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=" 월 화 수 목 금 토 일"
-                android:paddingLeft="10dp"
+                android:paddingStart="20dp"
+                android:layout_marginBottom="10dp"
                 />
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginEnd="15dp"
+            android:text="@{cycleEntity.time}"
+            android:textSize="20dp"
+            />
+
     </LinearLayout>
 </layout>
