--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -15,4 +15,10 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="TimePickerStyle">
+        <item name="android:textSize">30dp</item>
+        <item name="android:textColorPrimary">@color/purple_200</item>
+        <item name="colorControlNormal">@android:color/transparent</item>
+    </style>
 </resources>
