--- a/app/src/main/res/layout/recyclerview_hometodo_item.xml
+++ b/app/src/main/res/layout/recyclerview_hometodo_item.xml
@@ -36,7 +36,7 @@
                 android:textSize="15dp"
                 android:padding="10dp"/>
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:text="@{viewModel.getDDay(ToDoEntity.deadline_date)}"
