--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -8,49 +8,66 @@
     android:clickable="true"
     android:focusable="true">
 
-    <androidx.core.widget.NestedScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/calendarToolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:background="#7B68EE"
+            android:theme="@style/MyActionBar"
+            app:layout_collapseMode="pin"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:title="월"
+            app:titleMarginTop="15dp"
+            app:titleTextColor="@color/white" />
 
-            <com.kizitonwose.calendarview.CalendarView
-                android:id="@+id/exThreeCalendar"
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cv_dayViewResource="@layout/calendar_day"
-                app:cv_monthHeaderResource="@layout/calendar_header"
-                app:cv_orientation="horizontal"
-                app:cv_scrollMode="paged" />
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/exThreeSelectedDateText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:background="#EEEEEE"
-                android:fontFamily="sans-serif-medium"
-                android:paddingStart="20dp"
-                android:paddingTop="12dp"
-                android:paddingEnd="20dp"
-                android:paddingBottom="12dp"
-                android:textAllCaps="true"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                tools:text="7 Jan, 2019" />
+                <com.kizitonwose.calendarview.CalendarView
+                    android:id="@+id/exThreeCalendar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cv_dayViewResource="@layout/calendar_day"
+                    app:cv_monthHeaderResource="@layout/calendar_header"
+                    app:cv_orientation="horizontal"
+                    app:cv_scrollMode="paged" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/exThreeRv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:nestedScrollingEnabled="false" />
+                <TextView
+                    android:id="@+id/exThreeSelectedDateText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:background="#EEEEEE"
+                    android:fontFamily="sans-serif-medium"
+                    android:paddingStart="20dp"
+                    android:paddingTop="12dp"
+                    android:paddingEnd="20dp"
+                    android:paddingBottom="12dp"
+                    android:textAllCaps="true"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    tools:text="7 Jan, 2019" />
 
-        </LinearLayout>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/exThreeRv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:nestedScrollingEnabled="false" />
 
-    </androidx.core.widget.NestedScrollView>
+            </LinearLayout>
 
-
+        </androidx.core.widget.NestedScrollView>
+    </LinearLayout>
 </FrameLayout>
