--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+<layout>
     <data>
         <import type="androidx.core.content.ContextCompat" />
         <import type="com.example.todo_list.R"/>
@@ -12,8 +9,24 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/calendarToolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#7B68EE"
+            android:theme="@style/MyActionBar"
+            app:layout_collapseMode="pin"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:title="Schedule"
+            app:titleMarginTop="15dp"
+            app:titleTextColor="@color/white" />
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -23,7 +36,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tablayout">
+            app:layout_constraintTop_toBottomOf="@+id/calendarToolbar">
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/total_button"
