--- a/app/src/main/res/layout/recyclerview_home_item.xml
+++ b/app/src/main/res/layout/recyclerview_home_item.xml
@@ -32,6 +32,16 @@
                 android:textColor="@color/black"
                 android:textSize="15dp"
                 android:padding="10dp"/>
+
+            <TextView
+                android:id="@+id/recycler_time"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:text="@{homeEntity.time}"
+                android:textColor="@color/black"
+                android:textSize="15dp"
+                android:padding="10dp"/>
         </LinearLayout>
     </LinearLayout>
 </layout>
