--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TODO_List" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.TODO_List" parent="Theme.MaterialComponents.DayNight.NoActionBar">
 
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
@@ -20,5 +20,9 @@
         <item name="android:textSize">30dp</item>
         <item name="android:textColorPrimary">@color/purple_200</item>
         <item name="colorControlNormal">@android:color/transparent</item>
+    </style>
+    <style name="MyActionBar" parent="Widget.MaterialComponents.Toolbar">
+        <item name="tint">@color/black</item>
+        <item name="iconTint">@color/white</item>
     </style>
 </resources>
