--- a/app/src/main/res/layout/recyclerview_home_item.xml
+++ b/app/src/main/res/layout/recyclerview_home_item.xml
@@ -5,10 +5,10 @@
     <data>
         <import type="androidx.core.content.ContextCompat" />
         <import type="com.example.todo_list.R"/>
-        <import type="com.example.todo_list.data.CycleEntity"/>
+        <import type="com.example.todo_list.data.RoutineEntity"/>
         <variable
             name="homeEntity"
-            type="com.example.todo_list.data.CycleEntity" />
+            type="com.example.todo_list.data.RoutineEntity" />
     </data>
 
     <LinearLayout
