패키지 정리

--- a/app/src/main/res/layout/recyclerview_hometodo_item.xml
+++ b/app/src/main/res/layout/recyclerview_hometodo_item.xml
@@ -11,7 +11,7 @@
             type="com.example.todo_list.data.ScheduleEntity" />
         <variable
             name="viewModel"
-            type="com.example.todo_list.HomeViewModel" />
+            type="com.example.todo_list.ui.HomeViewModel" />
     </data>
 
     <LinearLayout
