--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -5,7 +5,7 @@
         <import type="com.example.todo_list.R"/>
         <variable
             name="todoViewModel"
-            type="com.example.todo_list.ScheduleViewModel" />
+            type="com.example.todo_list.ui.ScheduleViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
