--- a/app/src/main/res/layout/recyclerview_hometodo_item.xml
+++ b/app/src/main/res/layout/recyclerview_hometodo_item.xml
@@ -5,13 +5,13 @@
     <data>
         <import type="androidx.core.content.ContextCompat" />
         <import type="com.example.todo_list.R"/>
-        <import type="com.example.todo_list.data.RoutineEntity"/>
+        <import type="com.example.todo_list.data.room.RoutineEntity"/>
         <variable
             name="ToDoEntity"
-            type="com.example.todo_list.data.ScheduleEntity" />
+            type="com.example.todo_list.data.room.ScheduleEntity" />
         <variable
             name="viewModel"
-            type="com.example.todo_list.ui.HomeViewModel" />
+            type="com.example.todo_list.ui.home.HomeViewModel" />
     </data>
 
     <LinearLayout
